# perceptionproof

./: .gitignore  CONTRIBUTING.md  DATA_LICENSES.md  LICENSE  NOTICE  PREREGISTRATION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTINUITY.md  MATHEMATICS.md  P2_SETUP.md  PAPER.md  PHASE2A_FINDINGS.md  PHASE2B_FINDINGS.md  PHASE2_PROGRAM.md  RELATED_WORK.md
experiments/navsim_p2a/: README.md  analyze.py  download_data.sh  leave_one_out.py  pp_result.json  setup_vm.sh  train_ensemble.py
experiments/navsim_p2b/: README.md  analyze_pdms.py  pp_pdms.json  score_pdms.py
experiments/navsim_p2c/: README.md  analyze.py  gen_tokens.py  leave_one_out_nc.py  pp_p2c_scaled.json  score_parallel.py  tf_mini_result.json
experiments/phase2_navsim_bridge/: README.md  analyze.py  bridge_data.json  score_bridge.py  verdict.json
experiments/phase2_rfs/: README.md  derisk_g1.py  g3_out.json  (+6 more)
harness/: __init__.py  cli.py  runner.py
perceptionproof/: __init__.py  backend.py  backend_synthetic.py  dataset.py  models.py  receipts.py  scoring.py  signals.py  types.py
protocol/: models.lock.json  slices.json
results/: .gitkeep  navsim_p2a_report.md  navsim_p2b_report.md  navsim_p2c_report.md  navsim_p2d_transfuser_report.md  synthetic_receipts.jsonl  synthetic_report.json  wod_e2e_rfs_jointtrained_report.md  wod_e2e_rfs_report.md  wod_e2e_rfs_surround_report.md  wod_e2e_rfs_vision_report.md
tests/: test_end_to_end.py  test_local_backend.py  test_receipts.py  test_scoring.py  test_scoring_stats.py  test_signals.py  test_signals_s234.py
(+19 files in other folders)
